--- a/frontend/package.json
+++ b/frontend/package.json
@@ -66,6 +66,7 @@
     "react-router-dom": "^6.26.2",
     "recharts": "^2.15.3",
     "sonner": "^1.5.0",
+    "stripe": "^18.3.0",
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
